add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(Mats_Test Mats_Test.cpp)

add_executable(Aufgabe_1_3 Aufgabe_1_3.cpp)

add_executable(Aufgabe_1_8 Aufgabe_1_8.cpp)

add_executable(Aufgabe_1_9 Aufgabe_1_9.cpp)

add_executable(Aufgabe_1_10 Aufgabe_1_10.cpp)

add_executable(Aufgabe_1_11 Aufgabe_1_11.cpp)


add_executable(tests tests.cpp)

# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus

add_executable(mileToKilometer mileToKilometer.cpp)


